fix(layout) footer overlapping content since a66946e9d181b9caf08d2f5a84de46ca7db3d120

--- a/app/_assets/stylesheets/footer.less
+++ b/app/_assets/stylesheets/footer.less
@@ -1,6 +1,5 @@
 .footer {
   position: absolute;
-  bottom: 0;
   width: 100%;
   background-color: #f2f4f5;
 
